--- a/src/index.html
+++ b/src/index.html
@@ -15,65 +15,129 @@
             <p>宁夏景点门票</p>
         </div>
         <div class="main">
-            <div class="lbt">
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="./img/1.jpg" alt=""></div>
-                        <div class="swiper-slide"><img src="./img/2.jpg" alt=""></div>
-                        <div class="swiper-slide"><img src="./img/3.jpg" alt=""></div>
+            <div class="con">
+                <div class="lbt">
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="./img/1.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./img/2.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./img/3.jpg" alt=""></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="pic">
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
-                <dl>
-                    <dd><img src="./img/1.jpg" alt=""></dd>
-                    <dt>汉得信息</dt>
-                </dl>
+                <div class="pic">
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>汉得信息</dt>
+                    </dl>
+                </div>
+                <div class="big">
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>
+                            <p>额外的无</p>
+                            <p>对胃肠道</p>
+                            <p>的测定出</p>
+                        </dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>
+                            <p>额外的无</p>
+                            <p>对胃肠道</p>
+                            <p>的测定出</p>
+                        </dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>
+                            <p>额外的无</p>
+                            <p>对胃肠道</p>
+                            <p>的测定出</p>
+                        </dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>
+                            <p>额外的无</p>
+                            <p>对胃肠道</p>
+                            <p>的测定出</p>
+                        </dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>
+                            <p>额外的无</p>
+                            <p>对胃肠道</p>
+                            <p>的测定出</p>
+                        </dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>
+                            <p>额外的无</p>
+                            <p>对胃肠道</p>
+                            <p>的测定出</p>
+                        </dt>
+                    </dl>
+                    <dl>
+                        <dd><img src="./img/1.jpg" alt=""></dd>
+                        <dt>
+                            <p>额外的无</p>
+                            <p>对胃肠道</p>
+                            <p>的测定出</p>
+                        </dt>
+                    </dl>
+                </div>
             </div>
         </div>
     </div>
     <script src="./js/swiper.js"></script>
+    <script src="./js/better-scroll.min.js"></script>
     <script>
     var mySwiper = new Swiper('.swiper-container', {
         autoplay: true
     })
-    
+    let scroll = new BScroll('.main',{
+        click:true,
+        
+    })
     </script>
 </body>
 </html>
